Updated Twitter Card url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="twitter:title" content="MRCHRISOLIVER - Web Developer">
 	<meta name="twitter:description"
 		content="Chris Oliver is a Lancashire based web developer focusing on bulding modern web apps using Laravel, VueJS, Tailwind CSS.">
-	<meta name="twitter:image" content="assets/twitter-card.jpg">
+	<meta name="twitter:image" content="https://mrchrisoliver.me/assets/twitter-card.jpg">
 	<meta name="twitter:site" content="@mrchrxs">
 	<meta name="twitter:creator" content="@mrchrxs">
 	<script src="https://cdn.tailwindcss.com"></script>
