Updated Meta Description

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name=”robots” content=”index, follow”>
 	<title>MRCHRISOLIVER | Web Developer</title>
 	<meta name="description"
-		content="Chris Oliver is a Lancashire based web developer focusing on bulding modern web apps using Laravel, VueJS, Tailwind CSS.">
+		content="Chris Oliver is a Lancashire based web developer focusing on building modern web apps using Laravel, VueJS, Tailwind CSS.">
 	<meta name="twitter:title" content="MRCHRISOLIVER - Web Developer">
 	<meta name="twitter:description"
-		content="Chris Oliver is a Lancashire based web developer focusing on bulding modern web apps using Laravel, VueJS, Tailwind CSS.">
+		content="Chris Oliver is a Lancashire based web developer focusing on building modern web apps using Laravel, VueJS, Tailwind CSS.">
 	<meta name="twitter:image" content="https://mrchrisoliver.me/assets/twitter-card.jpg">
 	<meta name="twitter:site" content="@mrchrxs">
 	<meta name="twitter:creator" content="@mrchrxs">
@@ -66,7 +66,7 @@
 			<div class="font-bold">MRCHRISOLIVER</div>
 		</div>
 		<div class="pt-44 text-center">
-			<div class="text-7xl font-bold ">Building modern web apps</div>
+			<div class="text-6xl md:text-7xl font-bold ">Building modern web apps</div>
 			<p class="text-sm py-6 px-12 md:px-0">Hello there, my name is Chris, and I'm a web developer based in the
 				heart of
 				Lancashire.<br> I focus on building websites using modern technologies such as Laravel, VueJS, Inertia
