--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta name="twitter:title" content="MRCHRISOLIVER - Web Developer">
 	<meta name="twitter:description"
 		content="Chris Oliver is a Lancashire based web developer focusing on building modern web apps using Laravel, VueJS, Tailwind CSS.">
+	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:image" content="https://mrchrisoliver.me/assets/twitter-card.jpg">
 	<meta name="twitter:site" content="@mrchrxs">
 	<meta name="twitter:creator" content="@mrchrxs">
